fixed header spacing

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -225,14 +225,13 @@ section {
     flex-basis: 50%;
     flex-wrap: nowrap;
     margin: 0;
-
-    flex-grow : 1 ; 
-    padding : 1rem 0 1rem 1rem 
+    flex-grow: 1;
+    padding: 1rem;
   }
 
-  li{
-    margin : 0;
-    padding : 0 ;
+  li {
+    margin: 0;
+    padding: 0;
   }
 
   h1 {
